<resources>
    <string name="title_activity_maps">Map</string>
    <string name="app_name">Contacts</string>
    <string name="new_contact">New Contact</string>
    <string name="sort_list">Sort List</string>
    <string name="x">X</string>
    <string name="contact_name">Ugly monkey</string>
    <string name="call">CALL</string>
    <string name="sms">SMS</string>
    <string name="mail">E-mail</string>
    <string name="contact_mail">example@something.com</string>
    <string name="web">Website</string>
    <string name="contact_web">www.EtEllerAndet.dk</string>
    <string name="get_direction">Get direction</string>
    <string name="information">i</string>
    <string name="website">Website:</string>
    <string name="email">E-mail:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="contactName">Contact name:</string>
    <string name="save">Save</string>
    <string name="address">Address:</string>
    <string name="delete_contact">Delete contact</string>
    <string name="title_delete">DELETING..!</string>
    <string name="message_delete">Are you sure you want to delete this contact..?</string>
    <string name="yes">YES</string>
    <string name="cancel">CANCEL</string>
    <string name="birthday">Birthday</string>
    <string name="birthday_hint">DD/MM/YYYY</string>
    <string name="address_hint">Silcon Allé 1, Kolding</string>
    <string name="website_hint">bildebear.dk</string>
    <string name="email_hint">bild@bear.dk</string>
    <string name="tel_hint">12345678</string>
    <string name="name_hint">Lars Bilde</string>
    <string name="contacts_map">Contacts Map</string>
    <string name="edit">Edit</string>
    <string name="addressTitle">Title for the address</string>
    <string name="mapAddress">Address</string>
</resources>
