<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="350dp"
              android:layout_height="490dp"
              android:layout_gravity="center"
              android:background="@color/blueDark"
              android:orientation="vertical"
              android:padding="5dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveNewContact"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/button_save"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/txtCloseAddContact"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/circle_background"
            android:gravity="center"
            android:text="@string/x"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <!--Profile picture-->
        <ImageView
            android:id="@+id/addPicture"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@raw/monkey"/>

        <!--Contact name-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/contactName"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/addContactName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </LinearLayout>

        <!--Phone-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tel_hint"
                android:paddingLeft="10dp"
                android:text="@string/phone_number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/addPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tel_hint"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </LinearLayout>

        <!-- Mail -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/addEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </LinearLayout>

        <!-- WEB -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/website"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/addWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/website_hint"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </LinearLayout>

        <!-- Address -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/addAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </LinearLayout>

        <!-- Birthday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/birthday"
                android:textColor="@color/white"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/addBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dd_mm_yy"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/white"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>